Update foster care content, fix icon animation, adjust letter spacing on card component

--- a/app/styles/_global.scss
+++ b/app/styles/_global.scss
@@ -81,16 +81,10 @@ svg {
 /* Icon Drop Animation from https://ianlunn.github.io/Hover/ */
 @keyframes icon-drop {
   0% {
-    opacity: 0;
-  }
-
-  50% {
-    opacity: 0;
-    -webkit-transform: translateY(-100%);
     transform: translateY(-100%);
+    opacity: 0;
   }
 
-  51%,
   100% {
     opacity: 1;
   }
