--- a/app/styles/_nav.scss
+++ b/app/styles/_nav.scss
@@ -52,11 +52,10 @@ a.menu--link__icon {
 	&:hover,
 	&:focus,
 	&:active {
-		opacity: 0;
 		transition-duration: 0.3s;
 		animation-name: icon-drop;
 		animation-duration: 0.5s;
-	    animation-delay: 0.3s;
+	    animation-delay: 0.1s;
 	    animation-fill-mode: forwards;
 	    animation-timing-function: ease-in-out;
 		animation-timing-function: cubic-bezier(0.52, 1.64, 0.37, 0.66);
