--- a/app/styles/components/_card.scss
+++ b/app/styles/components/_card.scss
@@ -31,6 +31,7 @@
 	display: block;
 	margin-bottom: 0px;
     font-size: 3rem;
+    letter-spacing: -0.1rem;
     line-height: 0.9em;
 	font-weight: bold;
 	color: $dark-grey;
@@ -55,6 +56,7 @@
 	.card--text {
 		margin-bottom: 8px;
 	    font-size: 4.5rem;
+	    letter-spacing: -0.2rem;
 	}
 }
 
